[metadata]
name = doc-pytest-flow-chart
description = Pytest hook flow chart generator 
long_description = This is a Python tool generating which can generate pytest hooks flow chart

author = Andrzej Ostrowski
license = MIT
licesnse_file = license
platforms = linux
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = pytest, test


[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
setup_requires =
    setuptools>=42.0
    setuptools-scm>=3.4
install_requires =
    pytest
    graphviz
zip_safe = no


[options.packages.find]
where = src


[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]
collect_ignore = ["setup.py"]

[check-manifest]
ignore =
    VERSION.txt

[devpi:upload]
formats = sdist.tgz,bdist_wheel
